0.17.10
	update: make object form messages consistent (by Tyler J. Wagner)
	update: sort object ports in a more reasonable manner
	bugfix: completely fix ticket:211
0.17.9 2010-02-17
	new feature: added per-user UI options (ticket:29)
	new feature: LDAP cache can be disabled now (ticket:247)
	bugfix: error message was lost on SNMP tab (reported by Tommi Hokkanen)
	bugfix: expand/collapse links on IPv4 tree view (ticket:308)
	bugfix: local.php did not work with SNMP
	bugfix: added error handling to gateway function (ticket:303)
	bugfix: user's local real name was ignored with LDAP (ticket:252)
	update: SNMP support for more Catalyst switches
0.17.8 2009-12-25
	bugfix: triggers disable tabs completely now (ticket:211)
	bugfix: properly delete objects with linked ports (ticket:300)
	bugfix: completely remove warnings caused by ticket:277 (by Jason Lifsey)
	update: restore PortCompat editor functionality (ticket:263)
	update: don't show inacessible links in index (by Jeroen Benda)
	update: consider permitted VLANs in switchvlans (#302 by Boris Lytochkin)
	update: regular dictionary update
	bugfix: ajax code verifier response code bugfix
0.17.7 2009-11-09
	bugfix: work around unbuffered query in ports pop-up (ticket:297)
	update: add inline mode switcher by Jens Groh (ticket:298)
0.17.6 2009-10-31
	update: voice/video devices
	bugfix: PHP warning
	bugfix: escaping of a newly created IPv4 network name (ticket:292)
	bugfix: generate URLs more friendly for reverse proxies (ticket:246)
	new feature: "proximity" view in port selector popup (ticket:284)
	new feature: "$no_asset_tag" autotag (ticket:283)
0.17.5 2009-09-16
	bugfix: corrected reference counters in tag tree
	bugfix: "cn" autotag was not generated for objects
	new feature: make text in the "added new object X" message clickable (ticket:280) (by Boris Lytochkin)
	new feature: support for Ethernet transceivers (ticket:64) and WDM grids
	new feature: initial support of APC switched rack PDUs (ticket:175)