@@ -5379,10 +5379,10 @@ function renderMyPreferences ()
 
 function renderAccessDenied ()
 {
+	header ('Content-Type: text/html; charset=UTF-8');
 	echo '<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">'."\n";
 	echo '<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">'."\n";
 	echo "<head><title>RackTables: access denied</title>\n";
-	echo '<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />';
 	echo "<link rel=stylesheet type='text/css' href=pi.css />\n";
 	echo "<link rel=icon href='" . getFaviconURL() . "' type='image/x-icon' />";
 	echo "</head><body>";
