@@ -9,13 +9,13 @@ fixContext();
 redirectIfNecessary();
 if (!permitted())
 	renderAccessDenied();
+header ('Content-Type: text/html; charset=UTF-8');
 // Only store the tab name after clearance is got. Any failure is unhandleable.
 $_SESSION['RTLT'][$pageno] = $tabno;
 
 echo '<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">'."\n";
 echo '<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">'."\n";
 echo '<head><title>' . getTitle ($pageno) . "</title>\n";
-echo '<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />';
 echo "<link rel=stylesheet type='text/css' href=pi.css />\n";
 echo "<link rel=icon href='" . getFaviconURL() . "' type='image/x-icon' />";
 printStyle();
