@@ -57,11 +57,11 @@ function findSparePorts ($port_id, $only_racks = array())
 	return $ret;
 }
 
+header ('Content-Type: text/html; charset=UTF-8');
 ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" style="height: 100%;">
 <head>
- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <?php
 	echo "<title>RackTables pop-up</title>\n";
 	echo "<link rel=stylesheet type='text/css' href=pi.css />\n";
